# dsp-chain-bch-thesis

./: .gitignore  Dockerfile  README.md  docker-compose.yml
gr-grc/: .gitignore  FSK_BER_Simulation.grc  GFSK_Mod_Demod.grc  UHF_GMSK_Demod_Hier.grc  UHF_RX_TX_Base.grc  UHF_RX_TX_TEST.grc
gr-oot/gr-satellites/: .gitignore
gr-oot/gr-satellites/grc/components/: CMakeLists.txt
gr-oot/gr-satellites/python/components/: CMakeLists.txt
gr-oot/gr-satellites/python/satyaml/: PW-Sat2.yml
gr-oot/gr-satnogs/: .astylerc  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CONTRIBUTORS.md  README.md
gr-oot/gr-satnogs/apps/: CMakeLists.txt
gr-oot/gr-satnogs/cmake/Modules/: CodeCoverage.cmake  Findit++.cmake  satnogsConfig.cmake  targetConfig.cmake.in
gr-oot/gr-satnogs/debian/: control  gr-satnogs.install  rules
gr-oot/gr-satnogs/docs/doxygen/: CMakeLists.txt  Doxyfile.in  Doxyfile.swig_doc.in
gr-oot/gr-satnogs/examples/: bpsk_ber.grc  encode_decode_ax25.grc  fsk_ber.grc
gr-oot/gr-satnogs/grc/: CMakeLists.txt  satnogs.tree.yml  satnogs_amsat_duv_decoder.block.yml  satnogs_argos_ldr_decoder.block.yml  satnogs_ax100_mode5_decoder.block.yml  satnogs_ax100_mode5_encoder.block.yml  satnogs_ax100_mode6_decoder.block.yml  satnogs_ax100_mode6_encoder.block.yml  satnogs_ax25_decoder.block.yml  satnogs_ax25_encoder.block.yml  satnogs_ber_calculator.block.yml  satnogs_coarse_doppler_correction_cc.block.yml  satnogs_constellation_modulator.block.yml  satnogs_crc_async.block.yml  satnogs_cw_decoder.block.yml  satnogs_cw_encoder.block.yml  satnogs_cw_to_symbol.block.yml  satnogs_debug_msg_source.block.yml  satnogs_debug_msg_source_raw.block.yml  satnogs_doppler_compensation.block.yml  satnogs_doppler_correction_cc.block.yml  satnogs_frame_decoder.block.yml  satnogs_frame_encoder.block.yml  satnogs_frame_file_sink.block.yml  satnogs_ieee802_15_4_encoder.block.yml  satnogs_ieee802_15_4_variant_decoder.block.yml  satnogs_iq_sink.block.yml  satnogs_json_converter.block.yml  satnogs_lrpt_decoder.block.yml  satnogs_lrpt_sync.block.yml  satnogs_metadata_sink.block.yml  satnogs_morse_debug_source.block.yml  satnogs_morse_decoder.block.yml  satnogs_multi_format_msg_sink.block.yml  satnogs_noaa_apt_sink.block.yml  satnogs_ogg_encoder.block.yml  satnogs_ogg_source.block.yml  satnogs_rs_encoder.block.yml  satnogs_sigmf_metadata.block.yml  satnogs_sstv_pd120_sink.block.yml  (+8 more)
gr-oot/gr-satnogs/include/satnogs/: CMakeLists.txt  amsat_duv_decoder.h  argos_ldr_decoder.h  ax100_decoder.h  ax100_encoder.h  ax25.h  ax25_decoder.h  ax25_encoder.h  base64.h  ber_calculator.h  coarse_doppler_correction_cc.h  conv_decoder.h  conv_encoder.h  convolutional_deinterleaver.h  crc.h  crc_async.h  cw_decoder.h  cw_decoder_priv.h  cw_encoder.h  cw_to_symbol.h  date.h  debug_msg_source.h  debug_msg_source_raw.h  decoder.h  doppler_correction_cc.h  doppler_fit.h  encoder.h  frame_decoder.h  frame_encoder.h  frame_file_sink.h  golay24.h  ieee802_15_4_encoder.h  ieee802_15_4_variant_decoder.h  iq_sink.h  json_converter.h  log.h  metadata.h  (+24 more)
gr-oot/gr-satnogs/lib/: CMakeLists.txt  amsat_duv_decoder.cc  argos_ldr_decoder.cc  ax100_decoder.cc  ax100_encoder.cc  ax100_mode5.cc  ax100_mode5.h  ax100_mode5_encoder.cc  ax100_mode5_encoder.h  ax100_mode6.cc  ax100_mode6.h  ax100_mode6_encoder.cc  ax100_mode6_encoder.h  ax25_decoder.cc  ax25_encoder.cc  ber_calculator_impl.cc  ber_calculator_impl.h  coarse_doppler_correction_cc_impl.cc  coarse_doppler_correction_cc_impl.h  conv_decoder.cc  conv_encoder.cc  convolutional_deinterleaver.cc  crc.cc  crc_async_impl.cc  crc_async_impl.h  cw_decoder.cc  cw_decoder_priv.cc  cw_encoder_impl.cc  cw_encoder_impl.h  debug_msg_source_impl.cc  debug_msg_source_impl.h  debug_msg_source_raw_impl.cc  debug_msg_source_raw_impl.h  decoder.cc  doppler_correction_cc_impl.cc  doppler_correction_cc_impl.h  doppler_fit.cc  encoder.cc  frame_decoder_impl.cc  frame_decoder_impl.h  (+53 more)
gr-oot/gr-satnogs/lib/libfec/: CMakeLists.txt  ccsds.h  char.h  cpu_mode_generic.c  cpu_mode_ppc.c  cpu_mode_x86.c  cpu_mode_x86_64.c  decode_rs.c  decode_rs.h  decode_rs_8.c  decode_rs_ccsds.c  decode_rs_char.c  decode_rs_int.c  dotprod.c  dotprod_av.c  dotprod_mmx.c  dotprod_port.c  dotprod_sse2.c  dtest.c  encode_rs.c  encode_rs.h  encode_rs_8.c  encode_rs_av.c  encode_rs_ccsds.c  encode_rs_char.c  encode_rs_int.c  exercise.c  fec.c  fixed.h  gen_ccsds.c  gen_ccsds_tal.c  init_rs.c  init_rs.h  init_rs_char.c  init_rs_int.c  int.h  peaktest.c  peakval.c  peakval_av.c  peakval_mmx.c  (+42 more)
gr-oot/gr-satnogs/python/: CMakeLists.txt  __init__.py  doppler_compensation.py  generic_mod.py  utils.py
gr-oot/gr-satnogs/swig/: CMakeLists.txt  satnogs_swig.py.in  satnogs_swig0.i
gr-oot/gr-si446x/python/: var_len_packet_creator.py  var_len_packet_handler.py
jupyter-notebooks/: TED_Gain.ipynb
jupyter-notebooks/.ipynb_checkpoints/: TED_Gain-checkpoint.ipynb
tools/: BER_Simulation.grc  Frequency_Response_Filter.py  GSS_ZMQ_PySerial_Relay.grc  Generate_Waterfall.py  TED_gain.py  UHF_GMSK_Demod_Hier.py  ZMQ_PySerial_Relay.py  ber_sim.py  symbol_sync_test_float_ted_gain.m  test.py
tools/DigiCommPy/: __init__.py  channels.py  compensation.py  equalizers.py  errorRates.py  essentials.py  impairments.py  modem.py  passband_modulations.py  pulseshapers.py  signalgen.py  utility.py
tools/DigiCommPy/chapter_1/: demo_scripts.py  essentials.py  signalgen.py
tools/DigiCommPy/chapter_2/: bfsk.py  bpsk.py  constellations.py  constellations_demo.py  cpfsk.py  dbpsk_noncoherent.py  debpsk_coherent.py  gmsk.py  msk.py  oqpsk.py  passband_modulations.py  perf_bfsk.py  perf_bpsk.py  perf_dbpsk_coherent.py  perf_dbpsk_noncoherent.py  perf_gmsk.py  perf_msk.py  perf_oqpsk.py  perf_piby4_dqpsk.py  perf_qpsk.py  piby4_dqpsk.py  psd_estimates.py  pulseshapers.py  qpsk.py
tools/DigiCommPy/chapter_4/: awgnPerformance.py  rayleighPerformance.py  ricianPerformance.py
tools/DigiCommPy/chapter_5/: isi_equalizers_bpsk.py  lms_test.py  mmse_eq_delay_opti.py  mmse_equalizer_test.py  zf_equalizer_test.py
tools/DigiCommPy/chapter_6/: mqam_awgn_iq_imb.py  rf_impairments.py
(+18 files in other folders)
